# DOTplan

./: README.md  README.md~
DOTPlan_Quadcopter/: CMakeLists.txt  CMakeLists.txt~  package.xml
DOTPlan_Quadcopter/common/: waypoints (copy).txt
DOTPlan_Quadcopter/common/city/: waypoints.txt  waypoints.txt~
DOTPlan_Quadcopter/include/dotplan_interface_quadrotor/: RPSimpleMapServer.h  RPSimpleMapServer.h~
DOTPlan_Quadcopter/include/rosplan_interface_quadrotor/: RPSimpleMapServer.h
DOTPlan_Quadcopter/msg/: Action_interface.msg  Spawn_model.msg
DOTPlan_Quadcopter/quadnav/: indoor_slam.rviz  mapping_default.launch  spawn_quadrotor.launch~  spawn_quadrotor_city.launch  spawn_quadrotor_mapping.launch  spawn_quadrotor_playpen.launch~
DOTPlan_Quadcopter/quadnav/navigation/config/: costmap_common.yaml  costmap_common.yaml~  costmap_global_laser.yaml~  costmap_local.yaml~  planner.yaml  planner.yaml~  planner2.yaml
DOTPlan_Quadcopter/quadnav/navigation/launch/: amcl.launch  amcl.launch~  amcl_demo.launch  amcl_demo.launch~  amcl_demo_playpen.launch  gmapping_demo.launch  move_base.launch~  (+2 more)
DOTPlan_Quadcopter/quadnav/quadrotor/: quadrotor.urdf.xacro  quadrotor_base.urdf.xacro~  quadrotor_hokuyo_utm30lx.gazebo.xacro  quadrotor_hokuyo_utm30lx.urdf.xacro  quadrotor_hokuyo_utm30lx.urdf.xacro~
DOTPlan_Quadcopter/src/: RPSimpleMapServer.cpp  RPSimpleMapServer.cpp~  RPSimpleMapVisualization.cpp  RPSimpleMapVisualization.cpp~  actionInterface.cpp  actionInterface.cpp~  moveobject.cpp  moveobject.cpp~  rosplan_interface_quadrotor.cpp~  spawn_model_client.py~
DOTPlan_Quadcopter/srv/: Get_waypoints.srv
DOTPlan_Quadcopter/worlds/gazebo/: city.world  city.world~  citystation.world  teste.world
DOTPlan_Quadcopter/worlds/launch/: city.launch  playpen.launch  start.launch
xdot_rqt/: CMakeLists.txt  package.xml  plugin.xml  plugin.xml~
xdot_rqt/resource/: dispatcher2.ui  dispatcher3.ui  dispatcher3.ui~  simulator.ui
xdot_rqt/src/xdot_rqt/: XDotPDDLExecutor.py  XDotPDDLExecutor.py~  XDotPDDLSimulator (copy).py  XDotPDDLSimulator.py  XDotPDDLSimulator.py~  XDotPDDLSimulator2.py  dispatcher.py  sim.py
(+8308 files in other folders)
